# serve-rs

./: .cliff.toml  .release-plz.toml  Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
.github/workflows/: release.yml
src/: config.rs  handlers.rs  log.rs  main.rs
templates/: clear-storage.js  directory_listing.html  index.html
