[package]
name = "serve"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive"] }
eyre = "0.6.12"
percent-encoding = "2.3.1"
rinja = "0.3.5"
shadow-rs = "1.2.0"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
shadow-rs = "1.2.0"
